--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html class="no-js" lang="ru" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html class="no-js" lang="ru">
     <head>
         <title>Система видеодетекции объектов незаконной торговли | Честный Город</title>
-        <meta name="description" content="Система автоматической видеодетекции объектов незаконной торговли Честный Город">
+        <meta content="Система автоматической видеодетекции объектов незаконной торговли Честный Город" name="description">
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <link href="/css/style.css" rel="stylesheet">
@@ -14,53 +14,97 @@
         <div class="top-bar">
             <div class="row">
                 <div class="top-bar-left">
-                    <a th:href="@{/}">
-                        <img class="header_logo-s" src="/img/logo.svg">
-                    </a>
+                    <img class="header_logo-s" src="/img/logo.svg">
+                </div>
+                <div class="top-bar-right">
+                    <ul class="menu">
+                    <li><a th:href="@{/admin/files/0}">Управление</a></li>
+                    <!-- <li><a href="#">Действие</a></li>
+                    <li><a href="#">Аналитика</a></li>-->
+                    <li><a th:href="@{/admin/users/0}">Контакты</a></li>
+                    <li><a th:href="@{/logout}">Выйти</a></li>
+                    </ul>
                 </div>
             </div>
-            <br>
-            <ul class="dropdown menu" data-dropdown-menu="" role="menubar" data-dropdownmenu="iixdfk-dropdownmenu">
-                <li class="menu-text" role="menuitem" tabindex="0">Управление</li>
-                <li class="has-submenu is-dropdown-submenu-parent is-down-arrow" role="menuitem" tabindex="0" title="One" aria-haspopup="true">
-                    <a href="#" tabindex="-1">Действия</a>
-                    <ul class="submenu menu vertical is-dropdown-submenu first-sub" data-submenu="" aria-hidden="true" tabindex="-1" role="menu" style="">
-                        <li role="menuitem" class="is-submenu-item is-dropdown-submenu-item" tabindex="0"><a th:href="@{/admin/users/0}" tabindex="-1" style="color: darkblue">Пользователи</a></li>
-                        <li role="menuitem" class="is-submenu-item is-dropdown-submenu-item" tabindex="0"><a th:href="@{/admin/files/0}" tabindex="-1" style="color: darkblue">Файлы</a></li>
-                    </ul>
-                </li>
-                <li role="menuitem" tabindex="0"><a th:href="@{/help}" tabindex="-1">Справка</a></li>
-                <li role="menuitem" tabindex="0"><a th:href="@{/contact}" tabindex="-1">Контакты</a></li>
-                <li role="menuitem" tabindex="0"><a th:href="@{/logout}" tabindex="-1">Выход</a></li>
-            </ul>
         </div>
         <!-- End Top Bar -->
 
+        <br>
+
         <!-- You can now combine a row and column if you just need a 12 column row -->
         <div class="row">
-            <div class="medium-6 columns outer">
-                <div class="tabs" data-tabs="nn1osr-tabs" id="example-tabs">
-                    <h4 style="text-align: center">Участники</h4>
-                </div>
-                <div class="tabs-content" data-tabs-content="example-tabs">
-                    <div class="tabs-panel is-active" id="panel1" aria-hidden="false">
-                        <div class="media-object stack-for-small" th:each="p : ${persons}">
-                            <!--<div class="media-object-section">
-                                <img class="thumbnail" src="https://placehold.it/200x200">
-                            </div>-->
-                            <div class="media-object-section">
-                                <h5 th:text="${p.getFirstName()} + ' ' + ${p.getLastname()}"></h5>
-                                <p th:text="${p.getUsername()}"></p>
-                            </div>
-                            <div class="tabs-content">
-                                <form th:method="POST" th:action="@{/admin/users/delete/{id}(id=${p.getId()})}">
-                                    <input type="submit" value="Удалить">
-                                </form>
+            <div class="medium-6 columns">
+                <h4>Пользователи</h4>
+                <div class="media-object stack-for-small">
+                    <div class="media-object-section" th:each="p : ${persons}" style="padding: 10px">
+                        <div style="border: solid 1px gray; padding: 5px; border-radius: 5%">
+                            <ul class="spisok">
+                                <li class="title-name" th:text="${p.getFirstName()} + ' ' + ${p.getLastname()}">full_name</li>
+                                <li th:text="${p.getUsername()}">mail</li>
+                                <!--<li th:text="${p.getPhoneNumber()}">numbers</li>-->
+                            </ul>
+                            <div class="button-group user-bottom">
+                                <div class="row small-12">
+                                    <div class="column small-5">
+                                        <form>
+                                            <button class="submit small button" type="button">Редактировать</button>
+                                        </form>
+                                    </div>
+                                    <div class="column small-5">
+                                        <form th:method="POST" th:action="@{/admin/users/delete/{id}(id=${p.getId()})}">
+                                            <input class="alert small button" type="submit" value="Удалить">
+                                        </form>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <ul class="pagination margin-bottom-2" role="navigation" aria-label="Pagination">
+            </div>
+
+            <div class="medium-6 columns">
+                <h4>Добавить нового пользователя</h4>
+                <form th:method="POST" th:action="@{/admin/users/add}" th:object="${person}">
+                    <label>Имя<input type="text" th:field="*{firstName}"></label>
+                    <div class="alert" th:if="${#fields.hasErrors('firstName')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{firstName}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
+
+                    <label>Фамилия<input type="text" th:field="*{lastname}"></label>
+                    <div class="alert" th:if="${#fields.hasErrors('lastname')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{lastname}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
+
+                    <label>Электронная почта<input type="text" th:field="*{username}"></label>
+                    <div class="alert" th:if="${#fields.hasErrors('username')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{username}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
+
+                    <label>Пароль<input type="password" th:field="*{password}"></label>
+                    <div class="alert" th:if="${#fields.hasErrors('password')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{password}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
+
+                    <label>Подтверждение пароля<input type="password"th:field="*{passwordConfirm}"></label>
+                    <div class="alert" th:if="${#fields.hasErrors('passwordConfirm')}" style="border: solid 1px red; background: pink">
+                        <p th:errors="*{passwordConfirm}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
+                    </div>
+
+                    <label>Роль
+                        <select th:field="*{authority}">
+                            <option th:each="a : ${authorities}" th:text="${a.getDisplayName()}" th:value="${a.getId()}"></option>
+                        </select>
+                    </label>
+                    <input class="submit expanded button" type="submit" value="Добавить">
+                </form>
+            </div>
+        </div>
+
+
+
+        <div class="column row">
+            <nav aria-label="Pagination">
+                <ul class="pagination text-center" role="navigation" aria-label="Pagination">
                     <li class="disabled" th:if="${currentPage} == 0">Previous <span class="show-for-sr">page</span></li>
                     <li th:if="${currentPage} >= 1"><a th:href="@{/admin/users/{page}(page=${currentPage - 1})}">Previous</a><span class="show-for-sr">page</span></li>
 
@@ -71,54 +115,14 @@
                     <li class="disabled" th:if="${currentPage+1} == ${totalPages}">Next<span class="show-for-sr">page</span></li>
                     <li th:if="${currentPage+1} != ${totalPages}"><a th:href="@{/admin/users/{page}(page=${currentPage + 1})}" aria-label="Next page">Next<span class="show-for-sr">page</span></a></li>
                 </ul>
-            </div>
-
-            <div class="medium-6 columns outer">
-                <form th:method="POST" th:action="@{/admin/users/add}" th:object="${person}">
-                    <span>Электронная почта: </span><input type="text" th:field="*{username}">
-                    <div class="alert" th:if="${#fields.hasErrors('username')}" style="border: solid 1px red; background: pink">
-                        <p th:errors="*{username}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
-                    </div>
-
-                    <span>Пароль: </span><input type="password" th:field="*{password}">
-                    <div class="alert" th:if="${#fields.hasErrors('password')}" style="border: solid 1px red; background: pink">
-                        <p th:errors="*{password}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
-                    </div>
-
-                    <span>Подтверждение пароля: </span><input type="password"th:field="*{passwordConfirm}">
-                    <div class="alert" th:if="${#fields.hasErrors('passwordConfirm')}" style="border: solid 1px red; background: pink">
-                        <p th:errors="*{passwordConfirm}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
-                    </div>
-
-                    <span>Имя: </span><input type="text" th:field="*{firstName}">
-                    <div class="alert" th:if="${#fields.hasErrors('firstName')}" style="border: solid 1px red; background: pink">
-                        <p th:errors="*{firstName}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
-                    </div>
-
-                    <span>Фамилия: </span><input type="text" th:field="*{lastname}">
-                    <div class="alert" th:if="${#fields.hasErrors('lastname')}" style="border: solid 1px red; background: pink">
-                        <p th:errors="*{lastname}" style="color: red; font-size: small; text-align: left; vertical-align: middle; margin: auto; padding: 5px"></p>
-                    </div>
-
-                    <span>Роль: </span>
-                    <label>
-                        <select th:field="*{authority}">
-                            <option th:each="a : ${authorities}" th:text="${a.getDisplayName()}" th:value="${a.getId()}"></option>
-                        </select>
-                    </label>
-
-                    <p>
-                        <input type="submit" value="Submit">
-                    </p>
-                </form>
-            </div>
-
-            <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-            <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-            <script>
-                $(document).foundation();
-            </script>
+            </nav>
         </div>
+
+        <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+        <script>
+        $(document).foundation();
+        </script>
     </body>
 </html>
 
