update 11.11.2023 - rebuild on postgres

--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -126,10 +126,10 @@
                         <div class="buttom_uprav button-group">
                             <div class="row medium-10">
                                 <div class="small-4 column">
-                                    <button type="button" class="submit small button">Фото</button>
+                                    <button type="button" class="submit small button disabled">Фото</button>
                                 </div>
                                 <div class="small-3 column">
-                                    <button type="button" class="submit small button">Видео</button>
+                                    <button type="button" class="submit small button disabled">Видео</button>
                                 </div>
                                 <div class="small-3 column">
                                     <form th:method="POST" th:action="@{/admin/files/delete/{id}(id=${f.getId()})}">
