--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -126,7 +126,10 @@
                         <div class="buttom_uprav button-group">
                             <div class="row medium-10">
                                 <div class="small-4 column">
-                                    <button type="button" class="submit small button disabled">Фото</button>
+                                    <form th:method="POST" th:action="@{/admin/files/get/photo/{id}(id=${f.getId()})}" th:object="${f}">
+                                        <input type="submit" value="Фото" class="submit small button disabled" th:if="${f.getImages().size()} == 0">
+                                        <input type="submit" value="Фото" class="submit small button" th:if="${f.getImages().size()} != 0">
+                                    </form>
                                 </div>
                                 <div class="small-3 column">
                                     <button type="button" class="submit small button disabled">Видео</button>
@@ -145,7 +148,7 @@
 
             <!-- Сложный элемент -->
             <div class="medium-6 columns">
-
+                <!-- КНОПКА АВТООБНОВЛЕНИЯ -->
                 <div class="row">
                     <div class="columns large-2">
                         <div class="switch">
@@ -160,19 +163,39 @@
                 </div>
 
                 <h4>Факты несанкционированной торговли</h4>
-                <img class="thumbnail" src="https://placehold.it/650x350">
-                <div class="row small-up-4">
-                    <div class="column">
-                        <img class="thumbnail" src="https://placehold.it/250x200">
+
+                <div th:if="${images.size()} == 0">
+                    <img class="thumbnail" src="https://placehold.it/650x350">
+                    <div class="row small-up-4">
+                        <div class="column">
+                            <img class="thumbnail" src="https://placehold.it/250x200">
+                        </div>
+                        <div class="column">
+                            <img class="thumbnail" src="https://placehold.it/250x200">
+                        </div>
+                        <div class="column">
+                            <img class="thumbnail" src="https://placehold.it/250x200">
+                        </div>
+                        <div class="column">
+                            <img class="thumbnail" src="https://placehold.it/250x200">
+                        </div>
                     </div>
-                    <div class="column">
-                        <img class="thumbnail" src="https://placehold.it/250x200">
-                    </div>
-                    <div class="column">
-                        <img class="thumbnail" src="https://placehold.it/250x200">
-                    </div>
-                    <div class="column">
-                        <img class="thumbnail" src="https://placehold.it/250x200">
+                </div>
+                <div th:if="${images.size()} != 0">
+                    <img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(0)}" width="650px" height="350px"/>
+                    <div class="row small-up-4">
+                        <div class="column">
+                            <a th:href="@{/admin/files/resort/{num}(num = 1)}"><img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(1)}" width="250" height="200"/></a>
+                        </div>
+                        <div class="column">
+                            <a th:href="@{/admin/files/resort/{num}(num = 2)}"><img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(2)}" width="250" height="200"/></a>
+                        </div>
+                        <div class="column">
+                            <a th:href="@{/admin/files/resort/{num}(num = 3)}"><img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(3)}" width="250" height="200"/></a>
+                        </div>
+                        <div class="column">
+                            <a th:href="@{/admin/files/resort/{num}(num = 4)}"><img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(4)}" width="250" height="200"/></a>
+                        </div>
                     </div>
                 </div>
             </div>
