--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -115,7 +115,10 @@
                 <!-- ELEMENT START -->
                 <div class="media-object stack-for-small" th:each="f : ${fileInform}">
                     <div class="media-object-section">
-                        <img class="thumbnail" src="https://placehold.it/200x200">
+                        <!--<img class="thumbnail" src="https://placehold.it/200x200">-->
+                        <video controls width="250">
+                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
+                        </video>
                     </div>
                     <div class="media-object-section">
                         <ul class="spisok">
