update 11.11.2023 not last update

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -52,7 +52,11 @@
     padding-bottom: 10px;
 }
 .buttom_uprav{
-     padding-top: 20%;
+     padding-top: 10%;
+}
+.switch-otstup{
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 .header_logo-s{
     width: 170px;
