--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -65,7 +65,7 @@
                             </div>
                             <div class="small-2 cell column">
                                 <label class="button" onclick="document.getElementById('file').click()">Обзор</label>
-                                <input type="file" name="file" id="file" style="display:none" onchange="document.getElementById('pathField').setAttribute('value',document.getElementById('file').value)">
+                                <input type="file" accept="video/*" name="file" id="file" style="display:none" onchange="document.getElementById('pathField').setAttribute('value',document.getElementById('file').value)">
                             </div>
                             <div class="medium-12 column">
                                 <input  class="button expanded" type="submit" value="Загрузить">
@@ -115,8 +115,7 @@
                 <!-- ELEMENT START -->
                 <div class="media-object stack-for-small" th:each="f : ${fileInform}">
                     <div class="media-object-section">
-                        <!--<img class="thumbnail" src="https://placehold.it/200x200">-->
-                        <video controls width="250">
+                        <video controls width="300" muted class="thumbnail">
                             <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
                         </video>
                     </div>
@@ -199,6 +198,9 @@
                         <div class="column">
                             <a th:href="@{/admin/files/resort/{num}(num = 4)}"><img class="thumbnail" th:src="'data:image/png;base64,' + ${images.get(4)}" width="250" height="200"/></a>
                         </div>
+                    </div>
+                    <div>
+                        <button type="button" class="submit expanded button">Отправить в надзорный орган</button>
                     </div>
                 </div>
             </div>
