update - 13.11.2023 - Fixed uploading images to the site - Fixed the listing of images on the site

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -37,7 +37,7 @@
                 <h4>Пользователи</h4>
                 <div class="media-object stack-for-small" th:each="p : ${persons}">
                     <div class="media-object-section" style="padding: 10px">
-                        <div style="border: solid 1px gray; padding: 5px; border-radius: 5%">
+                        <div style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
                             <ul class="spisok">
                                 <li class="title-name" th:text="${p.getFirstName()} + ' ' + ${p.getLastname()}">full_name</li>
                                 <li th:text="${p.getUsername()}">mail</li>
