--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -57,20 +57,26 @@
 
         <div class="row">
             <div class="medium-6 columns">
-                <div class="download">
+                <div class="download medium-12 columns" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke"> <!-- style="border: solid 1px gray" -->
                     <form id="uploadForm" th:method="POST" th:action="@{/admin/files/add}" enctype="multipart/form-data">
-                        <div class="grid-x">
-                            <div class="small-10 cell column">
-                                <input type="text" placeholder="C:\yours_file.mp4"  id="pathField" disabled>
+                        <div class="medium-12 columns">
+                            <div class="medium-12 row">
+                                <div class="medium-10 column">
+                                    <input type="text" placeholder="C:\yours_file.mp4"  id="pathField" disabled>
+                                </div>
+                                <div class="medium-2 column">
+                                    <label class="button" onclick="document.getElementById('file').click()">Обзор</label>
+                                    <input type="file" accept="video/*" name="file" id="file" style="display:none" onchange="document.getElementById('pathField').setAttribute('value',document.getElementById('file').value)">
+                                </div>
                             </div>
-                            <div class="small-2 cell column">
+                           <!-- <div class="medium-2 column">
                                 <label class="button" onclick="document.getElementById('file').click()">Обзор</label>
                                 <input type="file" accept="video/*" name="file" id="file" style="display:none" onchange="document.getElementById('pathField').setAttribute('value',document.getElementById('file').value)">
-                            </div>
-                            <div class="medium-12 column">
+                            </div>-->
+                            <div class="medium-12 row">
                                 <input  class="button expanded" type="submit" value="Загрузить">
                             </div>
-                            <div class="medium-12 column">
+                            <div class="medium-12 row">
                                 <progress class="progress" id="progressBar" value="0" max="100" style="width: 100%"></progress>
                             </div>
                         </div>
@@ -110,37 +116,57 @@
                     </script>
                 </div>
 
-                <h4>Все файлы</h4>
+                <h4>Загруженные файлы</h4>
 
                 <!-- ELEMENT START -->
-                <div class="media-object stack-for-small" th:each="f : ${fileInform}">
+                <div class="media-object stack-for-small" th:each="f : ${fileInform}" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
                     <div class="media-object-section">
-                        <video controls width="300" muted class="thumbnail">
+                        <!--<video controls width="300" muted class="thumbnail">
                             <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
+                        </video>-->
+                        <video class="thumbnail" width="300" height="200" poster="__POSTER__.jpg"  muted controls="controls">
+                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4" />
+                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/webm" />
+                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/ogg" /><!--[if gt IE 6]>
+                            <object width="640" height="375" classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"><!
+                            [endif]--><!--[if !IE]><!-->
+                            <object width="640" height="375" type="video/quicktime" data="__VIDEO__.mp4"><!--<![endif]-->
+                                <param name="src" value="__VIDEO__.mp4"/>
+                                <param name="autoplay" value="false" />
+                                <param name="showlogo" value="false" />
+                                <object width="300" height="200" type="application/x-shockwave-flash"
+                                    data="__FLASH__.swf?image=__POSTER__.jpg&amp;file=__VIDEO__.mp4">
+                                    <param name="movie" value="__FLASH__.swf?image=__POSTER__.jpg&amp;file=__VIDEO__.mp4"/>
+                                    <img class="thumbnail" src="https://via.placeholder.com/300x200" width="640" height="360" />
+                                    <p>
+                                        <strong>No video playback capabilities detected.</strong>
+                                        Why not try to download the file instead?<br />
+                                        <a href="__VIDEO__.mp4">MPEG4 / H.264 “.mp4” (Windows / Mac)</a> |
+                                        <a href="__VIDEO__.ogv">Ogg Theora &amp; Vorbis “.ogv” (Linux)</a>
+                                    </p>
+                                </object><!--[if gt IE 6]><!-->
+                            </object><!--<![endif]-->
                         </video>
                     </div>
-                    <div class="media-object-section">
-                        <ul class="spisok">
-                            <li>Имя: <span th:text="${f.getFileName()}"></span></li>
-                            <li>Дата: <span th:text="${f.getPlacedAt()}"></span></li> <!-- исправить на дату записи видео в базе -->
-                            <li>Размер файла: <span th:text="${f.getFileSize()}"></span></li> <!-- Размер сделать в гигабайтах -->
-                        </ul>
-                        <div class="buttom_uprav button-group">
-                            <div class="row medium-10">
-                                <div class="small-4 column">
-                                    <form th:method="POST" th:action="@{/admin/files/get/photo/{id}(id=${f.getId()})}" th:object="${f}">
-                                        <input type="submit" value="Фото" class="submit small button disabled" th:if="${f.getImages().size()} == 0">
-                                        <input type="submit" value="Фото" class="submit small button" th:if="${f.getImages().size()} != 0">
-                                    </form>
-                                </div>
-                                <div class="small-3 column">
-                                    <button type="button" class="submit small button disabled">Видео</button>
-                                </div>
-                                <div class="small-3 column">
-                                    <form th:method="POST" th:action="@{/admin/files/delete/{id}(id=${f.getId()})}">
-                                        <input class="alert small button" type="submit" value="Удалить">
-                                    </form>
-                                </div>
+                    <div class="media-object-section" style="position: relative">
+                        <div class="medium-12">
+                            <ul class="spisok">
+                                <li style="font-size: 14px">Имя: <span th:text="${f.getFileName()}"></span></li>
+                                <li style="font-size: 14px">Дата: <span th:text="${f.getPlacedAt()}"></span></li> <!-- исправить на дату записи видео в базе -->
+                                <li style="font-size: 14px">Размер файла: <span th:text="${f.getFileSize()}"></span></li> <!-- Размер сделать в гигабайтах -->
+                            </ul>
+                        </div>
+                        <div class="small-12 row button-group" style="position: absolute; bottom: 10px">
+                            <div class="small-6 column">
+                                <form th:method="POST" th:action="@{/admin/files/get/photo/{id}(id=${f.getId()})}" th:object="${f}">
+                                    <input type="submit" value="Фото" class="submit small button disabled" th:if="${f.getImages().size()} == 0">
+                                    <input type="submit" value="Фото" class="submit small button" th:if="${f.getImages().size()} != 0">
+                                </form>
+                            </div>
+                            <div class="small-6 column">
+                                <form th:method="POST" th:action="@{/admin/files/delete/{id}(id=${f.getId()})}">
+                                    <input class="alert small button" type="submit" value="Удалить">
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -167,10 +193,10 @@
                 <h4>Факты несанкционированной торговли</h4>
 
                 <img class="thumbnail" src="https://placehold.it/650x350" th:if="${images.size()} == 0">
-                <img class="thumbnail" id="mainImg" th:src="'data:image/png;base64,' + ${images.get(0)}" width="650px" height="350px" th:if="${images.size()} >= 1">
+                <img class="thumbnail" id="mainImg" th:src="${images.get(0)}" width="650px" height="350px" th:if="${images.size()} >= 1">
                 <div class="row small-up-4">
                     <div class="column" th:each="image,stat : ${images}">
-                        <img class="thumbnail" th:id="'img' + ${stat.index}" th:src="'data:image/png;base64,' + ${image}" width="250" height="200" onclick="replace(this.id)">
+                        <img class="thumbnail" th:id="'img' + ${stat.index}" th:src="${image}" width="250" height="200" onclick="replace(this.id)">
                     </div>
                 </div>
                 <div>
@@ -178,6 +204,7 @@
                 </div>
                 <script th:inline="javascript">
                     function replace(id) {
+                        console.log(id)
                         let currentImageSrc = document.getElementById(id).getAttribute('src');
                         let mainImage = document.getElementById('mainImg');
                         mainImage.setAttribute('src',currentImageSrc)
