--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -124,28 +124,8 @@
                         <!--<video controls width="300" muted class="thumbnail">
                             <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
                         </video>-->
-                        <video class="thumbnail" width="300" height="200" poster="__POSTER__.jpg"  muted controls="controls">
-                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4" />
-                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/webm" />
-                            <source th:src="'/saved/' + ${f.getFileName()}" type="video/ogg" /><!--[if gt IE 6]>
-                            <object width="640" height="375" classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"><!
-                            [endif]--><!--[if !IE]><!-->
-                            <object width="640" height="375" type="video/quicktime" data="__VIDEO__.mp4"><!--<![endif]-->
-                                <param name="src" value="__VIDEO__.mp4"/>
-                                <param name="autoplay" value="false" />
-                                <param name="showlogo" value="false" />
-                                <object width="300" height="200" type="application/x-shockwave-flash"
-                                    data="__FLASH__.swf?image=__POSTER__.jpg&amp;file=__VIDEO__.mp4">
-                                    <param name="movie" value="__FLASH__.swf?image=__POSTER__.jpg&amp;file=__VIDEO__.mp4"/>
-                                    <img class="thumbnail" src="https://via.placeholder.com/300x200" width="640" height="360" />
-                                    <p>
-                                        <strong>No video playback capabilities detected.</strong>
-                                        Why not try to download the file instead?<br />
-                                        <a href="__VIDEO__.mp4">MPEG4 / H.264 “.mp4” (Windows / Mac)</a> |
-                                        <a href="__VIDEO__.ogv">Ogg Theora &amp; Vorbis “.ogv” (Linux)</a>
-                                    </p>
-                                </object><!--[if gt IE 6]><!-->
-                            </object><!--<![endif]-->
+                        <video class="thumbnail" width="300" height="200"  muted controls="controls">
+                            <source th:src="${f.getFullPath()}" type="video/mp4" />
                         </video>
                     </div>
                     <div class="media-object-section" style="position: relative">
@@ -193,10 +173,10 @@
                 <h4>Факты несанкционированной торговли</h4>
 
                 <img class="thumbnail" src="https://placehold.it/650x350" th:if="${images.size()} == 0">
-                <img class="thumbnail" id="mainImg" th:src="${images.get(0)}" width="650px" height="350px" th:if="${images.size()} >= 1">
+                <img class="thumbnail" id="mainImg" th:src="'data:image/png;base64,' + ${images.get(0)}" width="650px" height="350px" th:if="${images.size()} >= 1">
                 <div class="row small-up-4">
                     <div class="column" th:each="image,stat : ${images}">
-                        <img class="thumbnail" th:id="'img' + ${stat.index}" th:src="${image}" width="250" height="200" onclick="replace(this.id)">
+                        <img class="thumbnail" th:id="'img' + ${stat.index}" th:src="'data:image/png;base64,' + ${image}" width="250" height="200" onclick="replace(this.id)">
                     </div>
                 </div>
                 <div>
