--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -7,6 +7,25 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <link href="/css/style.css" rel="stylesheet">
         <link href="/css/foundation.min.css" rel="stylesheet">
+
+        <!--<script>
+            setInterval(update,1000)
+            function update(){
+                let myNum = document.getElementById('myNum');
+                const xhr = new XMLHttpRequest();
+                xhr.open("GET", "http://localhost:8080/test");
+                xhr.send();
+                xhr.responseType = "json";
+                xhr.onload = () => {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        const data = xhr.response;
+                        myNum.setAttribute('value',data);
+                    } else {
+                        console.log(`Error: ${xhr.status}`);
+                    }
+                };
+            }
+        </script>-->
     </head>
 
     <body>
@@ -30,28 +49,7 @@
         <!-- End Top Bar -->
 
         <!--<button class="button" id="btn">Click</button>-->
-        <label for="myNum"></label><input id="myNum" type="number" value="0">
-
-        <script>
-            function update(){
-                let myNum = document.getElementById('myNum');
-                console.log("Try load!")
-                const xhr = new XMLHttpRequest();
-                xhr.open("GET", "http://localhost:8080/test");
-                xhr.send();
-                xhr.responseType = "json";
-                xhr.onload = () => {
-                    if (xhr.readyState === 4 && xhr.status === 200) {
-                        const data = xhr.response;
-                        console.log(data)
-                        myNum.setAttribute('value',data);
-                    } else {
-                        console.log(`Error: ${xhr.status}`);
-                    }
-                };
-            }
-            button.addEventListener("click",update);
-        </script>
+        <!--<label for="myNum"></label><input id="myNum" type="number" value="0">-->
 
         <br>
 
