--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -29,6 +29,9 @@
 
             window.onload=checkReloading;
         </script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@stomp/stompjs@7.0.0/bundles/stomp.umd.min.js"></script>
+        <script src="/js/content-control.js" th:inline="javascript"></script>
     </head>
 
     <body>
@@ -119,7 +122,7 @@
                 <h4>Загруженные файлы</h4>
 
                 <!-- ELEMENT START -->
-                <div class="media-object stack-for-small" th:each="f : ${fileInform}" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
+                <div class="media-object stack-for-small" id="uploadFiles" th:each="f : ${fileInform}" style="border: solid 1px lightgray; padding: 10px; background-color: whitesmoke">
                     <div class="media-object-section">
                         <!--<video controls width="300" muted class="thumbnail">
                             <source th:src="'/saved/' + ${f.getFileName()}" type="video/mp4"/>
