--- a/src/main/resources/templates/admin/files.html
+++ b/src/main/resources/templates/admin/files.html
@@ -37,12 +37,13 @@
                 position: relative;
             }
             .overlay{
-                min-width: 1280px;
+                min-width: 640px;
+                max-width: 1280px;
                 display: none;
                 width: 70vw;
                 height: auto;
                 position: absolute;
-                top: -3vw;
+                top: -4vw;
                 left: -35vw;
                 z-index: 999;
             }
